--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 text-center p-5">
-                <button id="navigate-button">Navigate</button>
+                <button id="navigate-button">LET"S GO</button>
             </div>
         </div>
     </div>
