--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body bgcolor="red">
     <!-- Mapbox Direction Plugin-->
     <script
         src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
